img client connects

--- a/src/makefile
+++ b/src/makefile
@@ -5,12 +5,14 @@ OBJS = main.o \
 			 ServerBuilder.o \
 			 Connection.o \
 			 P2pTable.o \
+			 ImageNetwork.o \
 			 SocketException.o
 HEADERS = ServiceBuilder.h \
 			 Service.h \
 			 ServerBuilder.h \
 			 Connection.h \
 			 P2pTable.h \
+			 ImageNetwork.h \
 			 SocketException.h
 CXXFLAGS = -Wall -Wno-deprecated -std=c++11
 LFLAGS = $(CXXFLAGS) 
@@ -36,6 +38,9 @@ Connection.o: Connection.h SocketException.h
 
 P2pTable.o: P2pTable.h Connection.h
 	$(CC) $(CXXFLAGS) -c P2pTable.cpp
+
+ImageNetwork.o: ImageNetwork.h Service.h Connection.h P2pTable.h
+	$(CC) $(CXXFLAGS) -c ImageNetwork.cpp
 
 SocketException.o: SocketException.h
 	$(CC) $(CXXFLAGS) -c SocketException.cpp
